# bb-events

./: README.md  buzzerbeater_descriptions.py  debug_ot_buzzers.py  normalize_buzzerbeater_periods.py  pyproject.toml  team_buzzerbeaters.py  team_shot_distance_hist.py  uv_run.sh
src/bb_events/: cli.py
src/bbinsider/: __init__.py  cli.py
