[project]
name = "bbinsider"
version = "0.1.0"
description = "BuzzerBeater match stats and event extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "tabulate",
    "Pillow",
]

[project.scripts]
bbinsider = "bbinsider.cli:main"
bbinsider-shotchart = "bbinsider.cli:shotchart"
bbinsider-buzzerbeaters = "bbinsider.cli:buzzerbeaters"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
