[project]
name = "bbinsider"
version = "0.1.0"
description = "BuzzerBeater match stats and event extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "tabulate",
    "Pillow",
    "beautifulsoup4",
]

[project.scripts]
bbinsider = "bbinsider.cli:main"
bbinsider-shotchart = "bbinsider.cli:shotchart"
bbinsider-buzzerbeaters = "bbinsider.cli:buzzerbeaters"
bbinsider-normalize-buzzerbeater-periods = "bbinsider.cli:normalize_buzzerbeater_periods"
bbinsider-team-info = "bbinsider.cli:team_info"
bbinsider-team-buzzerbeaters = "bbinsider.cli:team_buzzerbeaters"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
