[project]
name = "bb-events"
version = "0.1.0"
description = "BuzzerBeater match stats and event extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "tabulate",
    "Pillow",
    "beautifulsoup4",
    "matplotlib",
    "numpy",
]

[project.scripts]
bbinsider = "bb_events.cli:main"
bbinsider-shotchart = "bb_events.cli:shotchart"
bb-buzzerbeaters = "bb_events.cli:buzzerbeaters"
bb-team-info = "bb_events.cli:team_info"
bb-team-buzzerbeaters = "bb_events.cli:team_buzzerbeaters"
bb-team-shot-distance-hist = "bb_events.cli:team_shot_distance_hist"
bb-buzzerbeater-descriptions = "bb_events.cli:buzzerbeater_descriptions"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
